# FLSD-Net

./: README.md
FLSD-Net/: LF_CSD_NN.py  README.md  README_EN.md  pyproject.toml  requirements.txt
FLSD-Net/examples/: generate_figures.py  smoke_test.py
FLSD-Net/lf_csd_nn/: __init__.py  andes_bridge.py  dct.py  engine.py  figure_engine.py  masks.py  park.py  spectral.py
FLSD-Net/lf_csd_nn.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
FLSD-Net/tests/: test_engine_b_andes.py
