[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "lf-csd-nn"
version = "0.1.0"
description = "Differentiable LFPR and spectral-entropy Engine B for power-grid CSD (JAX)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "TaiScience Research Group" }]
keywords = ["power-systems", "critical-slowing-down", "lfpr", "spectral-entropy", "jax", "andes"]
dependencies = [
  "jax>=0.4.20",
  "jaxlib>=0.4.20",
  "numpy>=1.24",
  "scipy>=1.10",
]

[project.optional-dependencies]
andes = ["andes>=2.0"]
dev = ["andes>=2.0", "matplotlib>=3.7"]

[project.urls]
Homepage = "https://github.com/jackman993/LF-CSD-NN"
Documentation = "https://github.com/jackman993/LF-CSD-NN/blob/main/README_EN.md"
Repository = "https://github.com/jackman993/LF-CSD-NN"

[tool.setuptools.packages.find]
where = ["."]
include = ["lf_csd_nn*"]
